# AlarmBot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: apps-in-toss.md  architecture.md  db-schema.md  mvp-decisions.md  mvp-serving-spec.md  restructuring.md
method_b/: config.py  prepos.py
news_bot/: README.md  __init__.py  config.py  context.py  dedup.py  investigate.py  llm.py  notify.py  pipeline.py  pipeline_context.py  run.py  sources.py  state.py  summarize.py  supabase_sink.py  urgency.py  usage.py
news_bot/fixtures/: context_sample.json  sample_articles.json
news_bot/tests/: test_context.py  test_dedup.py  test_pipeline.py  test_supabase_sink.py  test_urgency.py
research/method_b/: README.md  __init__.py  attention.py  ingest.py  panel.py  regress.py  report.py  run.py  synth.py
server/: pyproject.toml
server/kokalim/: README.md  cli.py  config.py  notify.py  run.py  state.py
server/kokalim/core/: __init__.py  dedup.py  models.py  pipeline.py  pipeline_context.py  summarize.py  usage.py
server/kokalim/core/context/: __init__.py  graph.py  investigate.py  situation.py
server/kokalim/core/ingest/: __init__.py  sources.py
server/kokalim/core/triage/: __init__.py  llm.py  urgency.py
server/kokalim/db/migrations/: 001_init.sql  002_telegram_briefing.sql
server/tests/: test_context.py  test_dedup.py  test_pipeline.py  test_urgency.py
supabase/: schema.sql
tests/: test_attention.py  test_panel.py
vercel/: README.md  requirements.txt
vercel/api/: _common.py  notify.py  telegram.py
vercel/tests/: conftest.py  (+1 more)
(+2 files in other folders)
