[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kokalim"
version = "0.1.0"
description = "콕알림 — 관심 기업 소식 멀티채널 알림 서비스 백엔드"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
# LLM 백엔드로 Anthropic API를 쓸 때만 필요(기본 codex 백엔드는 subprocess 사용)
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
kokalim = "kokalim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kokalim*"]
